--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h3>Posts</h3>
   <div class="row">
-    <div class="col" *ngFor="let post of posts | async">
+    <div class="col" *ngFor="let post of posts">
       <div class="card" style="width: 120rem">
         <div class="card-body">
           <h4 class="card-title">{{ post.title }}</h4>
