--- a/src/app/components/crudinterface/crudinterface.component.html
+++ b/src/app/components/crudinterface/crudinterface.component.html
@@ -3,18 +3,31 @@
     <div class="col">
       <div class="card">
         <div class="card-body">
-          <h2 class="card-title">CRUD Interface for a Post</h2>
-          <form>
+          <h2 class="card-title">ADD/EDIT a Post</h2>
+
+          <form novalidate class="form-horizontal" (ngSubmit)="newPost()">
+
             <div class="form-group">
-              <label>User ID:</label>
-              <input name="userId" class="form-control" placeholder="User ID" type="text">
-              <label>Title:</label>
-              <input name="title" class="form-control" placeholder="User ID" type="text">
-              <label>Body:</label>
-              <textarea name="body" class="forms-control" placeholder="Body of a post"></textarea>
-              <button type="submit" class="btn-block">Done</button>
+              <label for="userId">User ID:</label>
+              <input name="userId" class="form-control" id="userId" placeholder="User ID" [(ngModel)]="userId" required="required">
             </div>
+
+            <div class="form-group">
+              <label for="title">Title:</label>
+              <input name="title" class="form-control" id="title" placeholder="Title" [(ngModel)]="title" required="required">
+            </div>
+
+            <div class="form-group">
+              <label for="body">Body:</label>
+              <textarea name="body" class="forms-control" id="body" placeholder="Body of a post" [(ngModel)]="body" required="required"></textarea>
+            </div>
+
+            <div class="form-group">
+              <button type="submit" class="btn-block" (click)="newPost()" (click)="back()">Post it</button>
+            </div>
+
           </form>
+
         </div>
       </div>
     </div>
