--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,6 +1,15 @@
 <div class="container">
   <h3>Posts</h3>
   <div class="row">
+
+    <div class="col">
+      <div class="card" style="width: 120rem">
+        <div class="card-body">
+          <button class="btn-block" (click)="toAddScreen()">Post something new</button>
+        </div>
+      </div>
+    </div>
+
     <div class="col" *ngFor="let post of posts">
       <div class="card" style="width: 120rem">
         <div class="card-body">
@@ -14,5 +23,6 @@
         </div>
       </div>
     </div>
+
   </div>
 </div>
