--- a/src/app/components/crudinterface/crudinterface.component.html
+++ b/src/app/components/crudinterface/crudinterface.component.html
@@ -5,7 +5,7 @@
         <div class="card-body">
           <h2 class="card-title">ADD/EDIT a Post</h2>
 
-          <form novalidate class="form-horizontal" (ngSubmit)="newPost()">
+          <form ngNativeValidate class="form-group" (ngSubmit)="newPost()">
 
             <div class="form-group">
               <label for="userId">User ID:</label>
@@ -19,11 +19,14 @@
 
             <div class="form-group">
               <label for="body">Body:</label>
-              <textarea name="body" class="forms-control" id="body" placeholder="Body of a post" [(ngModel)]="body" required="required"></textarea>
+              <textarea name="body" class="form-control" id="body" placeholder="Body of a post" [(ngModel)]="body" required="required"></textarea>
             </div>
 
-            <div class="form-group">
-              <button type="submit" class="btn-block" (click)="newPost()" (click)="back()">Post it</button>
+            <div class="form-group col-md-6">
+              <button type="submit" class="btn-block" (click)="newPost()">Post it</button>
+            </div>
+            <div class="form-group col-md-6">
+              <button type="submit" class="btn-block" (click)="back()">Cancel</button>
             </div>
 
           </form>
