--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -18,7 +18,7 @@
           <p class="card-text">
             <small class="text-muted">Posted by: {{ post.userId }}</small>
           </p>
-              <button class="btn-secondary">Edit</button>
+              <button class="btn-secondary" (click)="toEditScreen(post.id)">Edit</button>
               <button class="btn-secondary" (click)="deletePost(post.id)" (click)="reload()">Delete</button>
         </div>
       </div>
