CSS, html formázás

--- a/src/app/components/posts/posts.component.css
+++ b/src/app/components/posts/posts.component.css
@@ -1,5 +1,38 @@
-.card {
+.card-body {
   background-color: #f2f2f2;
   padding: 1rem;
   margin: 1rem;
+}
+
+.card-title {
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.card-text {
+  font-size: 16px;
+}
+
+.text-muted {
+  margin-bottom: 0px;
+}
+
+.btn-block {
+  alignment: center;
+  border: none;
+  padding: 10px;
+  background-color: #2e2f30;
+  font-size: 24px;
+  color: white;
+}
+
+.btn-secondary {
+  border: none;
+  padding: 5px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: 10px;
+  background-color: #2e2f30;
+  font-size: 18px;
+  color: white;
 }
