--- a/src/app/components/crudinterface/crudinterface.component.html
+++ b/src/app/components/crudinterface/crudinterface.component.html
@@ -23,7 +23,7 @@
             </div>
 
             <div class="form-group col-md-6">
-              <button type="submit" class="btn-block" (click)="postIt()">Post it</button>
+              <button type="submit" class="btn-block" (click)="postIt()">Post it!</button>
             </div>
             <div class="form-group col-md-6">
               <button class="btn-block" (click)="back()">Cancel</button>
