--- a/src/app/components/posts/posts.component.html
+++ b/src/app/components/posts/posts.component.html
@@ -1,25 +1,25 @@
 <div class="container">
-  <h3>Posts</h3>
+  <h3>List of Posts:</h3>
   <div class="row">
 
     <div class="col">
-      <div class="card" style="width: 120rem">
-        <div class="card-body">
-          <button class="btn-block" (click)="toAddScreen()">Post something new</button>
-        </div>
+      <div class="card">
+        <button class="btn-block" (click)="toAddScreen()">Post something new!</button>
       </div>
     </div>
 
     <div class="col" *ngFor="let post of posts">
-      <div class="card" style="width: 120rem">
+      <div class="card">
         <div class="card-body">
           <h4 class="card-title">{{ post.title }}</h4>
           <p class="card-text">{{ post.body }}</p>
           <p class="card-text">
             <small class="text-muted">Posted by: {{ post.userId }}</small>
           </p>
-              <button class="btn-secondary" (click)="toEditScreen(post.id)">Edit</button>
-              <button class="btn-secondary" (click)="deletePost(post.id)" (click)="reload()">Delete</button>
+          <div class="text-right">
+            <button class="btn-secondary" (click)="toEditScreen(post.id)">Edit</button>
+            <button class="btn-secondary" (click)="deletePost(post.id)" (click)="reload()">Delete</button>
+          </div>
         </div>
       </div>
     </div>
